@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - fix optional tests of interaction with [MakeMaker::Fallback] that
+            broke with its newest release
 
 0.005     2014-11-11 06:54:15Z
           - fix optional tests of interaction with [ModuleBuildTiny::Fallback]
